# node-glsl-compiler

./: .eslintrc.js  .gitattributes  .gitignore  .travis-build.sh  .travis-install-cmake.sh  .travis.yml  CMakeLists.txt  LICENSE.md  NodeJS.cmake  README.md  gulpfile.js  index.js  index.test.js  jest-config.json  jsdoc-config.json  package.json
example/: fail.frag  package.json  pass.frag  pass.vert  standalone-executables-example.js
lib/: ProcessError.js  ProcessError.test.js  polyfill.js  polyfill.test.js  spawnProcessAsync.js  spawnProcessAsync.test.js
src/: API.cpp  CompileStatus.h  GLSLangUtils.cpp  GLSLangUtils.h  IndependentCompiler.cpp  IndependentCompiler.h  NanUtils.h  Options.h  TaskQueueThread.cpp  TaskQueueThread.h  TaskWorker.cpp  TaskWorker.h  Trampoline.cpp  Trampoline.h  WorkItem.h  WorkList.cpp  WorkList.h
test/: index.test.js
test/lib/: ProcessError.test.js
